<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contractor.ModifiedFragment">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lin_lay24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:background="@color/green_100"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Spinner
                android:textAlignment="center"
                android:id="@+id/spin_loc"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_35sdp"
                android:fontFamily="sans-serif-condensed"
                android:spinnerMode="dropdown"
                android:text="@string/loc"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_horizontal"></Spinner>    </LinearLayout>
        <LinearLayout
            android:background="@color/red_100"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent">
            <TextView
                android:textAlignment="center"
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="@dimen/_12sdp"
                android:gravity="center_horizontal"></TextView>
        </LinearLayout>
        <LinearLayout
            android:background="@color/orange_800"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_ok"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/spincategory"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/orange_800"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center_horizontal"></TextView>


        </LinearLayout>


    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_acceptedoffer"></androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:visibility="gone"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/tv_getaccpetedjob"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/square_box"
        android:backgroundTint="@color/brown_400"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="sans-serif-condensed"
        android:padding="@dimen/_10sdp"
        android:text="@string/modify"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        tools:ignore="RtlCompat"></TextView>

</FrameLayout>