<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    android:orientation="vertical"
    tools:context=".Contractor.SummaryContractor">
    <LinearLayout
        android:background="@color/green_600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:drawablePadding="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/summary"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rel_lay"
            android:background="@color/grey_800"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_sumconso"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/consolidated"></TextView>
            <View
                android:layout_centerInParent="true"
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/white" />
            <TextView
                android:id="@+id/tv_sumcatwise"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/categorywise"></TextView>

        </RelativeLayout>




        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fram_summary"></FrameLayout>



    </LinearLayout>
</LinearLayout>