<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_100"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_16sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_16sdp"
        android:id="@+id/lin_lay"
        >
        <LinearLayout
            android:layout_weight=".2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
         <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Spinner
        android:id="@+id/spin_lang"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"></Spinner>

             <ImageView
                 android:id="@+id/share"
                 android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
                 android:src="@drawable/ic_share"></ImageView></RelativeLayout>    </LinearLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <ImageView
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_90sdp"
            android:background="@drawable/logof"/>
        </RelativeLayout>


        <LinearLayout
           android:orientation="vertical"
            android:layout_weight="1.8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
       >

    <LinearLayout
      android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:id="@+id/btn_cont"
            android:textSize="@dimen/_15sdp"
            android:background="@drawable/square_box"
            android:backgroundTint="@color/cyan_800"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:text="@string/conti"
            android:textAlignment="center"
            android:textAllCaps="true"></TextView>
         <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
             android:gravity="center"
             android:layout_height="wrap_content">
             <TextView
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:id="@+id/btn_process"
                 android:textAllCaps="true"
                 android:textSize="@dimen/_15sdp"
                 android:background="@drawable/square_box"
                 android:backgroundTint="#5F1361"
                 android:textColor="@color/white"
                 android:padding="@dimen/_10sdp"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="wrap_content"
                 android:text="@string/Process"
                 android:gravity="center_horizontal"></TextView>
             <TextView
                 android:layout_marginLeft="@dimen/_15sdp"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:id="@+id/btn_info"
                 android:textAllCaps="true"
                 android:textSize="@dimen/_15sdp"
                 android:background="@drawable/square_box"
                 android:backgroundTint="#5F1361"
                 android:textColor="@color/white"
                 android:padding="@dimen/_10sdp"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_width="@dimen/_90sdp"
                 android:layout_height="wrap_content"
                 android:text="@string/Info"
                 android:gravity="center_horizontal"></TextView>
         </LinearLayout>

        <LinearLayout

            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:text="@string/conceptualizedby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:id="@+id/ll_shantal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:src="@drawable/shital"
                android:layout_height="@dimen/_25sdp"/>
            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/comname"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/shantal"
                android:singleLine="true"
                android:gravity="center"
                android:textColor="@color/orange_900"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
             </LinearLayout>
        </LinearLayout>
    </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>