<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    android:orientation="vertical"
    tools:context=".Contractor.PostJob">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include layout="@layout/header"></include>

        <LinearLayout
            android:background="@drawable/square_box"
            android:backgroundTint="@color/green_600"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_location"
                android:background="@drawable/square_box"
                android:backgroundTint="@color/green_200"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:padding="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:textAllCaps="true"
                android:gravity="center"
                android:hint="@string/loc"
                android:layout_height="@dimen/_90sdp"
              ></TextView>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/square_box"
            android:backgroundTint="@color/green_600"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_sitedetails"
                android:backgroundTint="@color/green_200"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/square_box"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:hint="@string/site"></EditText>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/square_box"
            android:backgroundTint="@color/green_600"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/datetime"
                android:backgroundTint="@color/red_100"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/square_box"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:hint="@string/datetime"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            <Spinner-->
<!--                android:id="@+id/spincat"-->
<!--                android:clickable="true"-->
<!--                android:background="@drawable/square_box"-->
<!--                android:backgroundTint="@color/yellow_100"-->
<!--                android:fontFamily="sans-serif-condensed"-->
<!--                android:textColor="@color/black"-->
<!--                android:padding="@dimen/_15sdp"-->
<!--                android:textSize="@dimen/_15sdp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:textAllCaps="true"-->
<!--                android:gravity="center"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Category of labour"></Spinner>-->


        </LinearLayout>
          <LinearLayout
      android:id="@+id/llview"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


  </LinearLayout>

        <TextView
            android:id="@+id/iv_plus"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="@drawable/square_box"
            android:backgroundTint="@color/yellow_100"
            android:fontFamily="sans-serif-condensed"
            android:padding="@dimen/_15sdp"
            android:text="@string/category"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"></TextView>
        <ImageView
            android:visibility="gone"
android:layout_marginTop="@dimen/_minus20sdp"
            android:layout_marginRight="@dimen/_35sdp"
            android:id="@+id/iv_plus1"
            android:textSize="@dimen/_15sdp"
            android:layout_width="@dimen/_30sdp"
            android:src="@drawable/ic_plus"
            android:layout_gravity="right"
            android:layout_height="@dimen/_30sdp"
            ></ImageView>
        <LinearLayout

            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/btnpostjob"
                android:fontFamily="sans-serif-condensed"
                android:backgroundTint="@color/cyan_800"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/square_box"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/postjob"></TextView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>